--- a/portifólio matemática/css/geral.css
+++ b/portifólio matemática/css/geral.css
@@ -25,3 +25,9 @@ font-family: 'Ubuntu', sans-serif;
 font-size: 18px;
 color: black;
 }
+
+h2{
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 20px;
+  color: #333233;
+}
