--- a/geral.css
+++ b/geral.css
@@ -28,3 +28,18 @@ h2{
   color: #333233;
   text-align: center;
 }
+
+ul{
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 18px;
+  color: black;
+  text-align: center;
+
+}
+
+li {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 18px;
+  color: black;
+  text-align: center;  
+}
