--- a/css/geral.css
+++ b/css/geral.css
@@ -29,10 +29,17 @@ h2{
   text-align: center;
 }
 
-ul, li{
+ul{
   font-family: 'Ubuntu', sans-serif;
   font-size: 18px;
   color: black;
   text-align: center;
-  
+
+}
+
+li {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 18px;
+  color: black;
+  text-align: center;  
 }
