--- a/geral.css
+++ b/geral.css
@@ -31,20 +31,21 @@ h2{
 
 
 h3{
-font-family: 'Ubuntu', sans-serif;
-color: black;
-font-size: 30px;
-text-align: center;
-border-radius: 20px 20px 20px 20px;
-background-color: ##32a875;
-border: 2px solid ##195c3f;
+  font-family: 'Ubuntu', sans-serif;
+  color: black;
+  font-size: 30px;
+  text-align: center;
+  border-radius: 20px 20px 20px 20px;
+  background-color: #32a875;
+  border: 2px solid ##195c3f;
 }
+
 h4{
-font-family: 'Ubuntu', sans-serif;
-color: black;
-font-size: 30px;
-text-align: center;
-border-radius: 20px 20px 20px 20px;
-background-color:#fff457;
-border: 2px solid #e0d426;
-} 
+  font-family: 'Ubuntu', sans-serif;
+  color: black;
+  font-size: 30px;
+  text-align: center;
+  border-radius: 20px 20px 20px 20px;
+  background-color: #fff457;
+  border: 2px solid #e0d426;
+}
