--- a/css/geral.css
+++ b/css/geral.css
@@ -49,3 +49,10 @@ h4{
   background-color: #fff457;
   border: 2px solid #e0d426;
 }
+
+li {
+color: #FF5151;
+font-family: 'Ubuntu', sans-serif;
+font-size: 18px;
+
+}
