--- a/css/geral.css
+++ b/css/geral.css
@@ -54,5 +54,10 @@ li {
 color: #FF5151;
 font-family: 'Ubuntu', sans-serif;
 font-size: 18px;
+}
 
+ul {
+color: #FF5151;
+font-family: 'Ubuntu', sans-serif;
+sfont-size: 18px;
 }
