--- a/css/geral.css
+++ b/css/geral.css
@@ -59,5 +59,6 @@ font-size: 18px;
 ul {
 color: #FF5151;
 font-family: 'Ubuntu', sans-serif;
-sfont-size: 18px;
+font-size: 18px;
+text-align: center;
 }
