--- a/geral.css
+++ b/geral.css
@@ -54,5 +54,12 @@ li {
 color: #FF5151;
 font-family: 'Ubuntu', sans-serif;
 font-size: 18px;
+text-align: center;
+}
 
+ul {
+color: #FF5151;
+font-family: 'Ubuntu', sans-serif;
+font-size: 18px;
+text-align: center;
 }
